:tada: init commit

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-  <!-- ------------- Navbar ------------- -->
+  <!--Navbar -->
   <header class="primary-header">
     <div class="container">
       <div class="nav">
-        <a href="#home"><img src="/logo.svg" alt="" class=""></a>
+        <a href="#home" aria-label="easybank homepage"><img src="/logo.svg" alt="" class=""></a>
         <button class="mobile-nav-toggle">
           <img src="/icon-hamburger.svg" alt="" class="icon-hanburger" aria-hidden="true" aria-expanded="false">
           <img src="/icon-close.svg" alt="" class="icon-close" aria-hidden="true" aria-expanded="false">
@@ -41,12 +41,12 @@
     </div>
   </header>
 
-  <!-- ------------- Contents ------------- -->
+  <!-- Contents -->
   <main class="hero">
     <section class="padding-block-3xl">
       <div class="container">
         <div class="even-columns">
-          <!-- -----Hero Text ------ -->
+          <!--Hero Text -->
           <div class="hero-text flow wrapper" style="--flow-spacer: var(--spacing-sm); max-width: 450px;">
             <h1 class="fs-primary-heading fw-normal text-primary-color text-align-center">
               Next generation digital banking
@@ -67,7 +67,7 @@
     </section>
 
 
-    <!-- ------------- Feature Section ------------- -->
+    <!-- Feature Section -->
     <section class="padding-block-xl bg-third-color">
       <div class="container flow">
 
@@ -81,14 +81,14 @@
           </p>
         </div>
         <div class="flow">
-          <ul role="list" class="even-columns " style="--flow-spacer:1.5rem;">
+          <ul class="even-columns " style="--flow-spacer:1.5rem;">
             <li class="flow wrapper" style="--align-items:start;">
               <img src="/icon-online.svg" alt="online banking" />
               <div class="flow wrapper text-align-center"
                 style="--flow-spacer:1.5rem; margin-top: var(--spacing-md); --align-items:start;">
-                <h4 class="fs-fourth-heading text-primary-color fw-normal">
+                <h3 class="fs-fourth-heading text-primary-color fw-normal">
                   Online Banking
-                </h4>
+                </h3>
                 <p class="fs-base text-secondary-color">
                   Our modern web and mobile applications allow you to keep track of
                   your finances wherever you are in the world.
@@ -137,12 +137,12 @@
       </div>
     </section>
 
-    <!-- -----latest Articles----- -->
+    <!-- latest Articles -->
     <section class="blogs padding-block-lg bg-very-light-grayish-blue">
       <div class="container">
         <div class="flow" style="--flow-spacer:var(--spacing-md)">
           <h3 class="fs-secondary-heading text-primary-color fw-normal text-align-center">Latest Articles</h3>
-          <ul role="list" class="even-columns">
+          <ul class="even-columns">
             <li class="card">
               <img class="img-size-article" src="/image-currency.jpg" alt="currency" />
               <div class="flow padding-block-sm card-text" style="--flow-spacer:0.625rem">
@@ -222,15 +222,15 @@
     </section>
   </main>
 
-  <!-- ------------- Footer ------------- -->
+<!-- footer -->
   <footer class="bg-primary-color padding-block-lg">
     <div class="container">
       <div class="footer">
         <div class="footer-logo flow">
-          <a href="#home" aria-label="home">
+          <a href="#home" aria-label="easybank homepage">
             <img src="/logo-white.svg" alt="">
           </a>
-          <ul role="list" aria-label="Social links" class="footer-social-links">
+          <ul aria-label="Social links" class="footer-social-links">
             <li>
               <a aria-label="facebook" href="#">
                 <svg class="social-icon">
@@ -268,8 +268,8 @@
             </li>
           </ul>
         </div>
-        <nav class="footer-nav">
-          <ul role="list" aria-label="Footer" class="footer-nav-list wrapper flow" style="--flow-spacer: 0.9rem;">
+        <div class="footer-nav">
+          <ul aria-label="Footer" class="footer-nav-list wrapper flow" style="--flow-spacer: 0.9rem;">
             <li>
               <a href="#">About Us</a>
             </li>
@@ -289,7 +289,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-        </nav>
+        </div>
         <div class="footer-button flow" style="--flow-spacer:1.5rem;">
           <button type="button" class="btn-primary">
             Request Invite
@@ -302,14 +302,6 @@
     </div>
   </footer>
   <script type="module" src="/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Observer.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/EaselPlugin.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/MotionPathPlugin.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
 
 </body>
 
